[package]
name = "scss_mass_compiler"
homepage = "https://github.com/two-six/scss_mass_compiler"
repository = "https://github.com/two-six/scss_mass_compiler"
categories = ["command-line-utilities"]
readme = "README.md"
license = "LGPL-3.0-or-later"
version = "1.0.0"
edition = "2021"
description = "Recursively converts all .scss files in current directory and it’s subdirectories."

[dependencies]
grass = "0.11.0"
ansi_term = "0.12.1"
